--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,5 @@ jobs:
 
     - name: Commit Changes
       run: |
-        git commit data.json -m 'Re-build data.json' || echo "No changes to commit"
+        git commit incidencia_covid.json -m 'Re-build incidencia_covid.json' || echo "No changes to commit"
         git push https://${{github.actor}}:${{secrets.GH_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{ github.ref }} || echo "No changes to commit"
