--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,29 +14,30 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # Scraping job
-  autoscrape:
-    # The type of runner that the job will run on
-    runs-on: macos-latest
-
-    # Load repo and install R
+ SetUpR:
+    runs-on: macos-10.15
+    strategy:
+      matrix:
+        r-version: [4.0.2]
     steps:
-    - uses: actions/checkout@master
-    
-    # Install R
-    - uses: r-lib/actions/setup-r@master
-      with:
-        r-version: '3.6.3'
+      - uses: actions/checkout@v2
 
-    # Set-up R
-    - name: Install pacakges
-      run: R -e 'source("install_packages.R", echo = TRUE)'
-        
-    # Run R script
-    - name: Scrape
-      run: R -e 'source("script.R", echo = TRUE)'
+      - name: Set up R ${{ matrix.r-version }}
+        uses: r-lib/actions/setup-R@v1
+        with:
+          r-version: ${{ matrix.r-version }}
 
-    - name: Commit Changes
-      run: |
-        git commit incidencia_covid.json -m 'Re-build incidencia_covid.json' || echo "No changes to commit"
-        git push https://${{github.actor}}:${{secrets.GH_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{ github.ref }} || echo "No changes to commit"
+      - name: Install dependencies
+        run: |
+          install.packages(c("tidyverse", "jsonlite","lubridate","glue"))
+        shell: Rscript {0}
+
+      - name: Updating data and cleaning
+        run: |
+          source('script.R')
+        shell: Rscript {0}
+
+      - name: Commit Changes
+        run: |
+          git commit data.json -m 'Re-build data.json' || echo "No changes to commit"
+          git push https://${{github.actor}}:${{secrets.GH_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{ github.ref }} || echo "No changes to commit"
